# H7CAD

./: .gitignore  CHANGELOG.md  COMMANDS.md  Cargo.toml  README.md  ROADMAP.md  build.rs
.factory/: DXF-NATIVE-PORT-PLAN.md  ENTITY-TYPE-MIGRATION-PLAN.md  init.sh  services.yaml
.factory/skills/: dxf-dwg-mission-validator.md  recovery-mission-validator.md
.github/: FUNDING.yml
.github/workflows/: flatpak-release.yml  release.yml
.memory/: 2026-04-19.md
assets/linetypes/: H7CAD.lin
assets/patterns/: H7CAD.pat
crates/h7cad-native-builder/: Cargo.toml
crates/h7cad-native-dwg/: Cargo.toml
crates/h7cad-native-dxf/: Cargo.toml
crates/h7cad-native-facade/: Cargo.toml
crates/h7cad-native-model/: Cargo.toml
crates/h7cad-native-testkit/: Cargo.toml
docs/: ARCHITECTURE-TUTORIAL.md  DEVELOPMENT-PLAN.md  PRD.md  README.md  TUTORIAL.md  svg_export.md
docs/diagrams/: h7cad-architecture.html  h7cad-crates-layers.html  h7cad-startup-flow.html
docs/plans/: 2026-04-09-dwg-native-port-plan.md  2026-04-10-h7cad-runtime-native-migration.md  2026-04-17-acadrust-removal-plan.md  2026-04-19-drawing-id-prefix-match-plan.md  2026-04-19-object-graph-impl-plan.md  2026-04-19-pid-cache-stats-plan.md  2026-04-19-pid-edit-cli-plan.md  2026-04-19-pid-metadata-cmd-family-plan.md  2026-04-19-pid-neighbors-depth-plan.md  2026-04-19-pid-parse-cherry-pick-plan.md  2026-04-19-pid-parse-discoverability-plan.md  2026-04-19-pid-parse-remote-sync-plan.md  2026-04-19-pid-parse-sync-report.md  2026-04-19-pid-read-family-completion-plan.md  2026-04-19-pid-saveas-cmd-plan.md  2026-04-19-pid-saveas-flags-plan.md  2026-04-19-pid-setprop-generalization-plan.md  2026-04-19-pid-sidecar-migration-plan.md  2026-04-19-pid-verify-cmd-plan.md  2026-04-19-pid-writer-validate-cli-plan.md  2026-04-19-pid-writer-validate-edit-mode-plan.md  2026-04-19-pidclsid-pidreport-plan.md  2026-04-19-piddiff-pidversion-plan.md  2026-04-19-pidfind-cmd-plan.md  2026-04-19-pidhelp-cmd-plan.md  2026-04-19-pidneighbors-cmd-plan.md  2026-04-19-pidpath-cmd-plan.md  2026-04-19-pidrawstreams-cmd-plan.md  2026-04-19-sppid-identity-env-plan.md  2026-04-19-sync-local-to-upstream-plan.md  2026-04-20-sppid-bran-tutorial.md  2026-04-21-dwg-save-version-honesty-plan.md  2026-04-21-header-dim-tier1-plan.md  2026-04-21-header-dimstyle-name-refs-plan.md  2026-04-21-header-drawing-vars-plan.md  2026-04-21-header-misc-units-display-plan.md  2026-04-21-header-spline-mline-plan.md  2026-04-21-header-timestamps-plan.md  2026-04-21-header-ucs-family-plan.md  2026-04-21-header-view-vars-plan.md  (+46 more)
flatpak/: README-flatpak.md  io.github.HakanSeven12.H7CAD.ci.yml  io.github.HakanSeven12.H7CAD.metainfo.xml  io.github.HakanSeven12.H7CAD.yml
solver/: geometry-constraint-solver-BeyvFbpD.wasm
src/: cli.rs  linetypes.rs  main.rs  patterns.rs  types.rs
src/app/: cmd_result.rs  commands.rs  document.rs  helpers.rs  history.rs  layers.rs  mod.rs  properties.rs  update.rs  view.rs  workspace.rs
src/command/: group.rs  laymatch.rs  matchprop.rs  mod.rs  paste.rs  ungroup.rs
src/entities/: arc.rs  attribute.rs  circle.rs  common.rs  dimension.rs  ellipse.rs  hatch.rs  insert.rs  leader.rs  line.rs  lwpolyline.rs  mesh.rs  mline.rs  mod.rs  mtext.rs  multileader.rs  point.rs  polyline.rs  raster_image.rs  ray.rs  shape.rs  solid.rs  spline.rs  table.rs  text.rs  text_support.rs  tolerance.rs  traits.rs  underlay.rs  viewport.rs
src/io/: cui.rs  diagnostics.rs  mod.rs  obj.rs  (+12 more)
tests/: cli_batch_export.rs
(+383 files in other folders)
