[workspace]
members = [
    ".",
    "crates/h7cad-native-model",
    "crates/h7cad-native-builder",
    "crates/h7cad-native-dxf",
    "crates/h7cad-native-facade",
    "crates/h7cad-native-testkit",
    "crates/h7cad-native-dwg",
]
resolver = "2"

[package]
name = "H7CAD"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[features]
default = ["acadrust-compat"]
# Gate legacy compat adapters that bridge primitive entity types to acadrust::EntityType.
# 预计 B5 完成 native dispatch 后，可关闭此 feature 一次性删除所有 `mod compat_acadrust`
# 子模块。详见 docs/plans/2026-04-17-acadrust-removal-plan.md B3。
acadrust-compat = []

[dependencies]
iced = { version = "0.14", features = ["debug", "image", "svg", "advanced", "canvas"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck"] }
truck-modeling = "0.6"
truck-meshalgo = { version = "0.4", default-features = false, features = ["tessellation"] }
truck-polymesh = "0.6"
rfd = "0.15"
acadrust = "0.3.3"
h7cad-native-dxf = { path = "crates/h7cad-native-dxf" }
h7cad-native-model = { path = "crates/h7cad-native-model" }
open = "5"
printpdf = "0.9.1"
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

